# NetCheck

./: .gitignore  CHANGELOG-v1.0.md  CHANGELOG.md  INSTALL_GUIDE.md  README.md  log.txt  test_nethogs.py
gnome-extension/netcheck@local/: extension.js  metadata.json  prefs.js  stylesheet.css
gnome-extension/netcheck@local/schemas/: org.gnome.shell.extensions.netcheck.gschema.xml
gnome-extension/netcheck@local/scripts/: install_extension_dev.sh
netcheckd/: pyproject.toml  requirements.txt  setup.cfg
netcheckd/netcheckd/: __init__.py  __main__.py  collector_nethogs.py  config.py  db.py  service.py
netcheckd/scripts/: install_systemd_user.sh
scripts/: check.sh  install.sh  uninstall.sh
